# codigoglobant

./: .gitignore  PruebaDeCmake.sln  README.md
PruebaDeCmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project.sln  PruebaDeCmake.sln  PruebaDeCmake.vcxproj  PruebaDeCmake.vcxproj.filters  Source.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  nrvotest.cpp
